fix: el-scrollbar

--- a/template/modules/styles-desktop/assets/global.less
+++ b/template/modules/styles-desktop/assets/global.less
@@ -63,3 +63,9 @@ a {
 .el-footer {
   line-height: @--footer-height;
 }
+
+#__nuxt {
+  .el-scrollbar {
+    height: 100%;
+  }
+}
